# Advanced_XO_Game

./: README.md
Codes/: CMakeLists.txt  CMakeLists.txt.user.38247ae  CMakeLists.txt.user.c88fbdc  GameData.cpp  GameData.h  ai.cpp  ai.h  aipage.cpp  aipage.h  aipage.ui  game_logic.cpp  game_logic.h  game_wrapper.cpp  game_wrapper.h  gameboard.cpp  gameboard.h  gameboard.ui  gamehistory.cpp  gamehistory.h  gamehistory.ui  gamereplay.cpp  gamereplay.h  gamereplay.ui  headstats.ui  history.cpp  history.h  history.ui  mainscreen.cpp  mainscreen.h  mainscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  signup.cpp  signup.h  signup.ui  state.cpp  state.h  state.ui  turnpage.cpp  (+4 more)
Codes/openssl_x64-windows/: CONTROL
Codes/openssl_x64-windows/debug/lib/: libcrypto.lib  libssl.lib
Codes/openssl_x64-windows/debug/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
Codes/openssl_x64-windows/share/openssl/: vcpkg-cmake-wrapper.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
Codes/sqlite3_x64-windows/: CONTROL
Codes/sqlite3_x64-windows/debug/lib/: sqlite3.lib
Codes/sqlite3_x64-windows/lib/: sqlite3.lib
Codes/sqlite3_x64-windows/lib/pkgconfig/: sqlite3.pc
Codes/sqlite3_x64-windows/share/sqlite3/: vcpkg.spdx.json  vcpkg_abi_info.txt
Tests/: Perfoemance.docx  SDS.docx  SRS_1.docx  test_game_logic_performance.cpp  test_wrapper.cpp
